--- a/css/style.css
+++ b/css/style.css
@@ -5,22 +5,24 @@
   font-family: 'Roboto', sans-serif;
 }
 .grid-container {
-  width: 1140px;
-  margin: 82px auto 0 auto;
+  width: 100px;
+  margin: auto;
   display: grid;
-  grid-template-columns: repeat(4, 240px);
-  grid-template-rows: repeat(2, 260px);
-  grid-auto-rows: 260px;
-  gap: 60px;
+  grid-template-columns: repeat(1, 240px);
+  grid-template-rows: repeat(1, 260px);
+  grid-auto-rows: 180spx;
+  gap: 0px;
 }
 .news-item__img {
   width: 100%;
+  text-align: center;
 }
 .news-item__descr {
   margin-top: 15px;
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
+  text-align: center;
 }
 .news-item .someclass {
   display: block;
